<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_menu"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/item_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_1"
                android:title="@string/item_1_AZ"
                />
            <item
                android:id="@+id/item_2"
                android:title="@string/item_2_ZA"
                />
            <item
                android:id="@+id/item_3"
                android:title="@string/item_3_chronological"
                />
            <item
                android:id="@+id/item_4"
                android:title="@string/item_4_anti_chronological"
                />
        </menu>
    </item>



</menu>